[gd_scene load_steps=4 format=3 uid="uid://b8c0u85mnrtu6"]

[ext_resource type="Script" path="res://towers/aura_tower.gd" id="1_0p75h"]
[ext_resource type="Texture2D" uid="uid://cesic0h3wnxcj" path="res://assets/towers/d6_blue.png" id="2_6gni5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3n76e"]
radius = 91.0

[node name="AuraTower" type="Node2D"]
script = ExtResource("1_0p75h")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_6gni5")

[node name="RangeDetector" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 8

[node name="RangeCollider" type="CollisionShape2D" parent="RangeDetector"]
shape = SubResource("CircleShape2D_3n76e")

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="body_entered" from="RangeDetector" to="." method="_on_range_detector_body_entered"]
[connection signal="body_exited" from="RangeDetector" to="." method="_on_range_detector_body_exited"]
